Added error rendering to main page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
             </div>
           </div>
         </div>
-        <div class="notification-header">
+        <div class="notification-header.hidden">
           <div class="notification-header-content">
-            <b>!</b> ERROR: TEXT
           </div>
         </div>
     </div>
